@@ -1,27 +1,30 @@
 package platinpython.vfxgenerator.data;
 
+import net.minecraft.core.Holder;
+import net.minecraft.core.HolderLookup;
 import net.minecraft.data.PackOutput;
 import net.minecraft.data.loot.BlockLootSubProvider;
 import net.minecraft.data.loot.LootTableProvider;
 import net.minecraft.world.flag.FeatureFlags;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.storage.loot.functions.CopyBlockState;
-import net.minecraft.world.level.storage.loot.functions.CopyNbtFunction;
+import net.minecraft.world.level.storage.loot.functions.CopyComponentsFunction;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
-import net.minecraft.world.level.storage.loot.providers.nbt.ContextNbtProvider;
-import net.minecraftforge.registries.RegistryObject;
 import platinpython.vfxgenerator.block.VFXGeneratorBlock;
 import platinpython.vfxgenerator.util.RegistryHandler;
 import platinpython.vfxgenerator.util.registries.BlockRegistry;
+import platinpython.vfxgenerator.util.registries.DataComponentRegistry;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Set;
+import java.util.concurrent.CompletableFuture;
 
 public class ModLootTableProvider extends LootTableProvider {
-    public ModLootTableProvider(PackOutput output) {
+    public ModLootTableProvider(PackOutput output, CompletableFuture<HolderLookup.Provider> lookupProvider) {
         super(
-            output, Collections.emptySet(),
-            List.of(new LootTableProvider.SubProviderEntry(Blocks::new, LootContextParamSets.BLOCK))
+            output, Set.of(), List.of(new LootTableProvider.SubProviderEntry(Blocks::new, LootContextParamSets.BLOCK)),
+            lookupProvider
         );
     }
 
@@ -37,14 +40,15 @@ public class ModLootTableProvider extends LootTableProvider {
                 createSingleItemTable(BlockRegistry.VFX_GENERATOR.get())
                     .apply(CopyBlockState.copyState(BlockRegistry.VFX_GENERATOR.get()).copy(VFXGeneratorBlock.INVERTED))
                     .apply(
-                        CopyNbtFunction.copyData(ContextNbtProvider.BLOCK_ENTITY).copy("particleData", "particleData")
+                        CopyComponentsFunction.copyComponents(CopyComponentsFunction.Source.BLOCK_ENTITY)
+                            .include(DataComponentRegistry.PARTICLE_DATA.get())
                     )
             );
         }
 
         @Override
         protected Iterable<Block> getKnownBlocks() {
-            return RegistryHandler.BLOCKS.getEntries().stream().map(RegistryObject::get)::iterator;
+            return RegistryHandler.BLOCKS.getEntries().stream().map(Holder::value)::iterator;
         }
     }
 }
